--- a/vignettes/src/part5.Rmd
+++ b/vignettes/src/part5.Rmd
@@ -5,7 +5,11 @@ output:
 ---
 
 ```{r, message=FALSE, include=!exists(".standalone"), eval=!exists(".standalone")}
+plotDir = ifelse(exists(".standalone"), "", "part5/")
+if(plotDir!="") if(!file.exists(plotDir)) dir.create(plotDir)
+knitr::opts_chunk$set(fig.path=plotDir, dev=c("png", "pdf"))
 knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+
 #Libraries
 library(mofaCLL)
 library(gridExtra)
@@ -30,13 +34,12 @@ library(tidyverse)
 # Gene expression signatures for CLL-PD (F4)
 
 Load datasets
-```{r}
+```{r, warning=FALSE, message=FALSE}
 data("mofaOut","gene","drug","validateScreen","rna","seahorse","protein","mito")
 gmts = list(H = system.file("externalData/h.all.v6.2.symbols.gmt", package = "mofaCLL"))
 setMap <- read_tsv(system.file("externalData/setToPathway.txt", package = "mofaCLL"), col_types = "cc")
 mitoProtList <- readxl::read_xls(system.file("externalData/Human.MitoCarta3.0.xls", package = "mofaCLL"), 
                                  sheet = 2)$Symbol
-
 ```
 
 Process MOFA model
@@ -114,7 +117,7 @@ pHis
 ```
 
 
-**Heatmap of significantly correalted genes (1% FDR)**
+**Heatmap of significantly correlated genes (1% FDR)**
 ```{r LF4_allGenes, fig.width=10, fig.height=10}
 corRes.sig <- filter(corRes.rna, adj.P.Val < 0.01)
 exprMat <- assay(ddsSub.vst)
@@ -128,12 +131,11 @@ plotMat <- mscale(plotMat, censor = 4)
 
 breaks <- seq(-4,4,length.out = 100)
 
-rnaHeatmap <- pheatmap(plotMat, scale = "none", cluster_cols = FALSE, cluster_rows = FALSE,
+pheatmap(plotMat, scale = "none", cluster_cols = FALSE, cluster_rows = FALSE,
          annotation_col = colAnno,
          color = colorRampPalette(c(colList[2],"white",colList[1]))(length(breaks)),
          breaks = breaks,
-         show_rownames = FALSE, show_colnames = FALSE, silent = TRUE)$gtable
-plot_grid(rnaHeatmap)
+         show_rownames = FALSE, show_colnames = FALSE)
 ```
 
 
@@ -161,7 +163,6 @@ enrichRes <- runCamera(exprMat, designMat, gmts$H,
 rnaEnrichHallmark <- enrichRes$enrichPlot + theme(legend.position = c(0.8,0.2))
 rnaEnrichHallmark
 
-#write_csv2(as_tibble(enrichRes$enrichTab,rownames = "set"), "sourceData_4a.csv")
 ```
 
 
@@ -172,9 +173,10 @@ designMat.U <- designMat[colnames(exprMat.U),]
 enrichRes.U <- runCamera(exprMat.U, designMat.U, gmts$H, 
                        id = rowData(ddsSub.vst[rownames(exprMat.U),])$symbol, contrast = 5, #LF4
                        method = "camera", pCut = 0.05, ifFDR = TRUE, removePrefix = "HALLMARK_",
-                       plotTitle = "Hallmarks (U-CLL, 5% FDR)")
+                       plotTitle = "Hallmarks (U-CLL, 5% FDR)", setMap = setMap)
 plotEnrichHallmark.U <- enrichRes.U$enrichPlot
 plotEnrichHallmark.U
+
 ```
 
 ### Enrichment using Hallmark genesets for M-CLLs
@@ -184,7 +186,7 @@ designMat.M <- designMat[colnames(exprMat.M),]
 enrichRes.M <- runCamera(exprMat.M, designMat.M, gmts$H, 
                        id = rowData(ddsSub.vst[rownames(exprMat.M),])$symbol, contrast = 5, #LF4
                        method = "camera", pCut = 0.05, ifFDR = TRUE, removePrefix = "HALLMARK_",
-                       plotTitle = "Hallmarks (M-CLL, 5% FDR)")
+                       plotTitle = "Hallmarks (M-CLL, 5% FDR)", setMap = setMap)
 plotEnrichHallmark.M <- enrichRes.M$enrichPlot
 plotEnrichHallmark.M
 ```
@@ -198,7 +200,7 @@ highLightList <- filter(corRes.sig, symbol %in% mitoProtList)$id
 
 **MTORC1_SIGNALING**
 
-```{r heatmapMTOR, fig.height=13, fig.width=11}
+```{r heatmapMTOR, fig.height=12.5, fig.width=7}
 corRes.sig <- dplyr::rename(corRes.rna, coef = "logFC") %>% dplyr::filter(adj.P.Val < 0.01, coef > 0)
 
 colAnno <- data.frame(row.names = colnames(exprMat),
@@ -207,18 +209,17 @@ col_fun = circlize::colorRamp2(c(min(colAnno$LF4),max(colAnno$LF4)), c("white",c
 annoColor <- list(`CLL-PD` = col_fun)
 colnames(colAnno) <- c("CLL-PD")
 
-plotSetHeatmapComplex(geneSigTab = corRes.sig, geneSet =gmts$H, setName = "HALLMARK_MTORC1_SIGNALING", exprMat, colAnno, scale = TRUE,
+plotSetHeatmapComplex(geneSigTab = corRes.sig, geneSet =gmts$H, setName = "HALLMARK_MTORC1_SIGNALING", exprMat, colAnno, plotTitle = "Hallmark mTORC1 signaling",scale = TRUE,
                       annoCol = annoColor, highLight =  highLightList)
 ```
 
 **OXIDATIVE_PHOSPHORYLATION**
-```{r heatmapOXPHOS,fig.height=15, fig.width=11}
-
-plotSetHeatmapComplex(geneSigTab = corRes.sig, geneSet =gmts$H, setName = "HALLMARK_OXIDATIVE_PHOSPHORYLATION", exprMat, colAnno, scale = TRUE, annoCol = annoColor, highLight =  highLightList)
+```{r heatmapOXPHOS,fig.height=12.5, fig.width=7}
+plotSetHeatmapComplex(geneSigTab = corRes.sig, geneSet =gmts$H, setName = "HALLMARK_OXIDATIVE_PHOSPHORYLATION", exprMat, colAnno, plotTitle = "Hallmark Oxidative phosphorylation",
+                      scale = TRUE, annoCol = annoColor, highLight =  highLightList)
 
 #get a percentage of mitochondiral proteins in this set
 allGeneInList <- intersect(corRes.sig$symbol, loadGSC(gmts$H)$gsc$HALLMARK_OXIDATIVE_PHOSPHORYLATION)
-
 ```
 
 How many genes are in the geneset of OXIDATIVE PHOSPHORYLAITON?
@@ -229,6 +230,17 @@ length(allGeneInList)
 How many genes are also on mitochondria?
 ```{r}
 sum(allGeneInList %in% mitoProtList)
+```
+
+**MYC_TARGETS_V1**
+```{r heatmapMYC,fig.height=12.5, fig.width=7}
+
+#pvalue for MYC
+filter(corRes.sig, symbol == "MYC")
+
+
+plotSetHeatmapComplex(geneSigTab = corRes.sig, geneSet =gmts$H, setName = "HALLMARK_MYC_TARGETS_V1", exprMat, colAnno, scale = TRUE,
+                      plotTitle = "Hallmark MYC targets v1", annoCol = annoColor, highLight =  highLightList)
 ```
 
 ## A network plot showing the overlap of gene enriched in those three pathways and annotate mitochondrial genes
@@ -243,7 +255,6 @@ nodeTab <- lapply(setList, function(eachSet) {
   mutate(setName = str_remove(setName,"HALLMARK_")) %>%
   mutate(setName = setMap[match(setName, setMap$setName),]$pathwayName) %>%
   mutate(mitoGene = ifelse(symbol %in% mitoProtList, "yes", "no"))
-#write_csv2(nodeTab, "sourceData_4d.csv")
 ```
 
 
@@ -257,42 +268,44 @@ nodeList <- data.frame(id = seq(length(allNodes))-1, name = allNodes, stringsAsF
   mutate(type = ifelse(name %in% nodeTab$setName,"set", type)) %>%
   mutate(nodeText = ifelse(type == "no","",name)) %>%
   mutate(pathText = ifelse(type == "set", name, "")) %>%
-  mutate(textSize = ifelse(type == "set",1,0.8))
+  mutate(textSize = ifelse(type == "set",3,0)) %>%
+  mutate(textPosAdjust = ifelse(name %in%"Oxidative phosphorylation",0.2,0.5))
   
 
 #get edge list
 edgeList <- nodeTab %>%
   dplyr::rename(Source = setName, Target = symbol) %>%
   mutate(Source = nodeList[match(Source,nodeList$name),]$id,
-         Target = nodeList[match(Target, nodeList$name),]$id)
+         Target = nodeList[match(Target, nodeList$name),]$id) %>%
   data.frame(stringsAsFactors = FALSE)
 
 net <- graph_from_data_frame(vertices = nodeList, d=edgeList, directed = FALSE)
 ```
 
 
-```{r, fig.height=5, fig.width=5}
+```{r, fig.height=2.5, fig.width=2.5}
 set.seed(2)
 tidyNet <- as_tbl_graph(net)
 enrichNet <- ggraph(tidyNet, layout = "igraph", algorithm = "nicely") + 
   geom_edge_link(color = "grey90", width=1) + 
-  geom_node_point(aes(color =type), size=3, alpha=0.5) + 
-  geom_node_text(aes(label = pathText, col = type, size = type), repel = TRUE, fontface= "bold") +
-  scale_size_manual(values =c(set = 6, yes = 5, no =4))+
-  scale_color_manual(values = c(yes = colList[4],no = "grey60", set = colList[1])) + 
+  geom_node_point(aes(color =type), size=3, alpha=0.7) + 
+  geom_node_text(aes(label = pathText, col = type, hjust = textPosAdjust), repel = FALSE, fontface= "bold", size=5, nudge_y = -0.5) +
+  #scale_size_manual(values =c(set = 4, yes = 5, no =4))+
+  scale_color_manual(values = c(yes = colList[5],no = "grey60", set = colList[1])) + 
   #scale_edge_color_brewer(palette = "Set2") +
-  theme_graph(base_family = "sans") + theme(legend.position = "none", plot.margin =margin(-10,0,-10,-10)) 
-enrichNet
+  theme_graph(base_family = "sans") + theme(legend.position = "none", plot.margin =margin(-5,-5,-5,-5)) 
 ```
 
 prepare legend
 ```{r, fig.height=5, fig.width=5}
+set.seed(2)
+
 legTab <- tibble(x=c(1,1), y=c(1,2), group = c("mitochondrial protein coding genes",
                                                "other genes"))
 
 legP <- ggplot(legTab, aes(x=x, y=y, col = group)) +
   geom_point(size=4) + theme_bw() +
-  scale_color_manual(values = c("mitochondrial protein coding genes" = colList[4], "other genes" = "grey60"), name = "") +
+  scale_color_manual(values = c("mitochondrial protein coding genes" = colList[5], "other genes" = "grey60"), name = "") +
   theme(legend.text = element_text(size=12),
         legend.background = element_blank())
 legP <- get_legend(legP)
@@ -347,15 +360,17 @@ sigListP[["CpG ODN"]] <- unique(filter(resTab, adj.P.Val < 0.01, logFC > 0)$GENE
 
 Enrichment
 ```{r, fig.width=8, fig.height=6}
-highSet <- c("MYC_TARGETS_V1", "MYC_TARGETS_V2", "MTORC1_SIGNALING","OXIDATIVE_PHOSPHORYLATION")
+highSet <- c("MYC targets v1", "MYC targets v2", "mTORC1 signaling","Oxidative phosphorylation")
 exprMat <- exprs(gse.vst)
 designMat <- model.matrix( ~ 1 + treatment, pData(gse.vst))
 
 enrichRes <- runCamera(exprMat, designMat, gmts$H, id = fData(gse.vst)$GENE_SYMBOL,
                        method = "camera", pCut = 0.01, ifFDR = TRUE, removePrefix = "HALLMARK_",
-                       plotTitle = "CpG ODN treatment", insideLegend = TRUE, setToHighlight = highSet)
+                       plotTitle = "CpG ODN treatment", insideLegend = TRUE, setToHighlight = highSet, setMap = setMap)
 plotEnrich.CPG <- enrichRes$enrichPlot + theme(plot.title = element_text(size=18, face = "bold"))
 plotEnrich.CPG
+
+
 ```
 
 ## Signature of IL21 + CD40L 
@@ -415,10 +430,11 @@ designMat <- mm
 enrichRes <- runCamera(exprMat, designMat, gmts$H, id = fData(gse.all)$`Gene Symbol`,
                        contrast = "treatmentIL21_CD40L",
                        method = "camera", pCut = 0.01, ifFDR = TRUE, removePrefix = "HALLMARK_",
-                       plotTitle = "IL21 + CD40L treatment", insideLegend = TRUE, setToHighlight = highSet)
+                       plotTitle = "IL21 + CD40L treatment", insideLegend = TRUE, setToHighlight = highSet, setMap = setMap)
 
 plotEnrich.IL21CD40L <- enrichRes$enrichPlot + theme(plot.title = element_text(size=18, face = "bold"))
 plotEnrich.IL21CD40L
+
 ```
 
 
@@ -442,9 +458,11 @@ Enrichment
 ```{r, fig.width=8, fig.height=6}
 enrichRes <- runCamera(exprMat, mm, gmts$H, id = fData(gse.all)$`Gene Symbol`, contrast = "treatmentTcell",
                        method = "camera", pCut = 0.01, ifFDR = TRUE, removePrefix = "HALLMARK_",
-                       plotTitle = "Co-culture with activated T cells", insideLegend = TRUE, setToHighlight = highSet)
+                       plotTitle = "Co-culture with activated T cells", insideLegend = TRUE, setToHighlight = highSet, setMap=setMap)
 plotEnrich.Tcell <- enrichRes$enrichPlot+ theme(plot.title = element_text(size=18, face = "bold"))
 plotEnrich.Tcell
+
+
 ```
 
 
@@ -504,9 +522,10 @@ designMat <- model.matrix( ~ 1  + patID  + stimulation, pData(gse.test))
 
 enrichRes <- runCamera(exprMat, designMat, gmts$H, id = fData(gse.test)$`Gene Symbol`,
                        method = "camera", pCut = 0.01, ifFDR = TRUE, removePrefix = "HALLMARK_",
-                       plotTitle = "anti-IgM treatment",insideLegend = TRUE, setToHighlight = highSet)
+                       plotTitle = "anti-IgM treatment",insideLegend = TRUE, setToHighlight = highSet, setMap = setMap)
 plotEnrich.IgM <- enrichRes$enrichPlot+ theme(plot.title = element_text(size=18, face = "bold"))
 plotEnrich.IgM
+
 ```
 
 ## Enrichment analysis using all avboe stimulation signatures
@@ -607,8 +626,6 @@ enrichRes <- runCamera(protMat, designMat, gmts$H,
                        plotTitle = "Pathway enrichment on protein level (5% FDR)", insideLegend = TRUE, direction = "Up", setMap = setMap)
 proteinEnrichHallmark <- enrichRes$enrichPlot + theme(legend.position = c(0.8,0.2))
 proteinEnrichHallmark
-
-##write_csv2(as_tibble(enrichRes$enrichTab,rownames = "set"), "sourceData_4b.csv")
 ```
 
 
@@ -626,7 +643,8 @@ col_fun = circlize::colorRamp2(c(min(colAnno$F4),max(colAnno$F4)), c("white",col
 annoColor <- list(`CLL-PD` = col_fun)
 colnames(colAnno) <- c("CLL-PD")
 
-plotProtMYC <- plotSetHeatmapComplex(geneSigTab = corRes.sigUp, geneSet =mycTar, setName = "HALLMARK_MYC_TARGETS", exprMat = protMat,colAnno =colAnno, scale = TRUE, annoCol = annoColor)
+plotProtMYC <- plotSetHeatmapComplex(geneSigTab = corRes.sigUp, geneSet =mycTar, setName = "HALLMARK_MYC_TARGETS", plotTitle = "Hallmark MYC targets",
+                                     exprMat = protMat,colAnno =colAnno, scale = TRUE, annoCol = annoColor)
 
 plotProtMYC
 ```
@@ -634,7 +652,7 @@ plotProtMYC
 ## Scatter plot of selected proteins
 
 ### MYC tagets
-```{r protMycTarScatter,fig.height=5, fig.width=15}
+```{r protMycTarScatter,fig.height=4, fig.width=12}
 seleProt <- c("MCM4","NME1","PAICS")
 tTab <- filter(corRes.prot, symbol %in% seleProt)
 scatterTab <- protMat[tTab$id,] %>% data.frame() %>%
@@ -650,7 +668,7 @@ plotProtScatter <- lapply(seleProt, function(n) {
   annoCoef <- paste("coefficient =",format(res$estimate,digits = 2))
   annoP <- paste("italic(P)~'=",formatNum(res$p.value, digits = 1, format = "e"),"'")
   ggplot(eachTab, aes(x=LF4, y=value)) +
-    geom_point(fill = colList[4],size=2,shape=21) + geom_smooth(method="lm",se=FALSE, linetype = "dashed", color = "grey50") +
+    geom_point(fill = colList[6],size=2,shape=21) + geom_smooth(method="lm",se=FALSE, linetype = "dashed", color = "grey50") +
     annotate("text", x = -1.5, y = Inf, label = annoCoef,
            hjust=0, vjust =1, size = 5, col= colList[1]) +
     annotate("text", x = -1.5, y = Inf, label = annoP,
@@ -693,6 +711,7 @@ protHeatmap <- plotSetHeatmapComplex(geneSigTab = corRes.sig.prot, geneSet = cor
                setName = "Proteins associated with CLL-PD (10%FDR)", annoCol = annoColor,
                highLight = corRes.mito$id)
 grobHeatmap = grid.grabExpr(draw(protHeatmap))
+plot_grid(grobHeatmap)
 ```
 
 How many up-regulated RNAs are mitochodnrial protiens?
@@ -702,7 +721,7 @@ nrow(corRes.rna.mito)
 head(arrange(corRes.rna.mito, desc(t)))
 ```
 
-```{r CLLPD_mitoProt,fig.height=6, fig.width=12}
+```{r CLLPD_mitoProt,fig.height=4, fig.width=8}
 seleProt <- c("VDAC1","HSPD1")
 tTab <- filter(corRes.prot, symbol %in% seleProt)
 scatterTab <- protMat[tTab$id,] %>% data.frame() %>%
@@ -718,7 +737,7 @@ plotMitoProScatter <- lapply(seleProt, function(n) {
   annoCoef <- paste("coefficient =",format(res$estimate,digits = 2))
   annoP <- paste("italic(P)~'=",formatNum(res$p.value, digits = 1, format = "e"),"'")
   ggplot(eachTab, aes(x=LF4, y=value)) +
-    geom_point(fill = colList[4],size=3,shape=21) + geom_smooth(method="lm",se=FALSE, linetype = "dashed", color = "grey50") +
+    geom_point(fill = colList[6],size=3,shape=21) + geom_smooth(method="lm",se=FALSE, linetype = "dashed", color = "grey50") +
     annotate("text", x = -1.5, y = Inf, label = annoCoef,
            hjust=0, vjust =1, size = 5, col= colList[1]) +
     annotate("text", x = -1.5, y = Inf, label = annoP,
@@ -729,32 +748,34 @@ plotMitoProScatter <- lapply(seleProt, function(n) {
 })
 corMitoMarer <- grid.arrange(grobs= plotMitoProScatter, ncol=2)
 corMitoMarer
+
 ```
 
 
 ## FACS validation using mitoTracker
-```{r mitoTracker, fig.height=6, fig.width=6}
+```{r mitoTracker, fig.height=4, fig.width=4}
 mitoTab <- mito %>% mutate(CLLPD = facTab[match(patientID, facTab$sample),]$value) %>%
   pivot_longer(-c(patientID, CLLPD), names_to = "feature", values_to = "MFI") %>%
-  mutate(logMFI = log10(MFI))
+  mutate(logMFI = log10(MFI)) %>%
+  filter(feature == "MitoTracker")
 
-pList <- lapply(c("MitoTracker"), function(n) {
-  eachTab <- filter(mitoTab, feature == n) 
-  res <- cor.test(eachTab$logMFI, eachTab$CLLPD)
-  annoCoef <- paste("coefficient =",format(res$estimate,digits = 2))
-  annoP <- paste("italic(P)~'=",formatNum(res$p.value, digits = 2, format = "e"),"'")
-  ggplot(eachTab, aes(x=CLLPD, y=logMFI)) +
-    geom_point(fill = colList[3],size=5,shape=21) + geom_smooth(method="lm",se=FALSE, linetype = "dashed", color = "grey50") +
-    annotate("text", x = -1.5, y = Inf, label = annoCoef,
-           hjust=0, vjust =1, size = 5, col= colList[1]) +
-    annotate("text", x = -1.5, y = Inf, label = annoP,
-           hjust=0, vjust =3, size = 5, col= colList[1], parse= TRUE) +
-    ggtitle(unique(eachTab$feature)) + ylab(expression(log[10]~(MFI))) + xlab("CLL-PD") +
-    #ylim(c(0.4,1.2)) +
-    theme_half 
-})
-plotMitoScatter <- grid.arrange(grobs= pList, ncol=1)
+
+eachTab <- mitoTab
+res <- cor.test(eachTab$logMFI, eachTab$CLLPD)
+annoCoef <- paste("coefficient =",format(res$estimate,digits = 2))
+annoP <- paste("italic(P)~'=",formatNum(res$p.value, digits = 2, format = "e"),"'")
+plotMitoScatter <- ggplot(eachTab, aes(x=CLLPD, y=logMFI)) +
+  geom_point(fill = colList[3],size=5,shape=21) + geom_smooth(method="lm",se=FALSE, linetype = "dashed", color = "grey50") +
+  annotate("text", x = -1.5, y = Inf, label = annoCoef,
+         hjust=0, vjust =1, size = 5, col= colList[1]) +
+  annotate("text", x = -1.5, y = Inf, label = annoP,
+         hjust=0, vjust =3, size = 5, col= colList[1], parse= TRUE) +
+  ggtitle(unique(eachTab$feature)) + ylab(expression(log[10]~(MFI))) + xlab("CLL-PD") +
+  theme_half 
+
+
 plotMitoScatter
+
 ```
 
 # Association between CLL-PD and energy metabolism
@@ -804,7 +825,7 @@ plotSeahorse <- ggplot(plotTab, aes(x=id, y=-log10(P.Value), col = factor, dodge
   scale_color_manual(values = c(LF1=colList[3],LF4=colList[4]),labels = 
                       c("F1","F4 (CLL-PD)"), name = "") +
   geom_hline(yintercept = fdrCut, linetype = "dashed", color = "grey50") +
-  coord_flip() + xlab("") + ylab(expression(-log[10]*'('*p~value*')')) + 
+  coord_flip() + xlab("") + ylab(bquote("-log"[10]*"("*italic("P")~"value)")) + 
   annotate("text", x = Inf, y = fdrCut, label = paste0("5% FDR"),
              size = 3, vjust =1.5, hjust=-0.1) +
   theme_full + theme(legend.position = "bottom", 
@@ -814,7 +835,7 @@ plotSeahorse
 
 ## Scatter plot for showing assocations
 
-```{r seahorseScatter,fig.height=5, fig.width=15}
+```{r seahorseScatter,fig.height=4, fig.width=12}
 plotFeature <- c("maximal.respiration", "spare.respiratory.capacity", "OCR")
 scatterTab <- seaMat[plotFeature,] %>% data.frame() %>%
   rownames_to_column("feature") %>% gather(key="patID", value = "value",-feature) %>%
@@ -840,22 +861,11 @@ pList <- lapply(plotFeature, function(n) {
 })
 grid.arrange(grobs= pList, ncol=3)
 plotSeahorseScatter <- pList
-plotSeahorseScatter
+
 ```
 
 # Associations between CLL-PD(F4) and ex-vivo drug response phenotyps
 
-## Loadings of drug view on LF1 and LF4
-
-```{r, fig.width=5, fig.height=8}
-plotLF1drug <- plotTopWeights.m(weightTab, view =  "Drugs", factor = "LF1", nfeatures = 15)
-plotLF1drug
-```
-
-```{r,fig.width=5, fig.height=8}
-plotLF4Drug <- plotTopWeights.m(weightTab, view =  "Drugs", factor = "LF4", nfeatures = 15)
-plotLF4Drug
-```
 
 ## Correlation test using limma
 
@@ -888,7 +898,7 @@ corRes.LF2 <- limma::topTable(fit2, number ="all", coef = "LF2", adjust.method =
 ```
 
 ## Compare the strength of associations to F1 (IGHV), F2 (trisomy12) and F4 (CLL-PD)
-```{r, fig.height=5, fig.width=10}
+```{r drugPvalOnly, fig.height=5, fig.width=11}
 plotTab <- bind_rows(corRes, corRes.LF1, corRes.LF2) %>% 
   mutate(P.adj = p.adjust(P.Value, method = "BH")) %>% arrange(P.Value)
 
@@ -904,7 +914,7 @@ plotDrugPval <- ggplot(plotTab, aes(x=name, y=-log10(P.Value), col = factor)) +
   geom_point(size=3) + 
   scale_color_manual(values = c(LF1=colList[3],LF2 = colList[5], LF4=colList[4]), labels = c("F1","F2","F4 (CLL-PD)")) +
   geom_hline(yintercept = fdrCut, linetype = "dashed", color = "grey50") +
-  xlab("") + ylab(expression(-log[10]*'('*p~value*')')) + 
+  xlab("") + ylab(bquote("-log"[10]*"("*italic("P")~"value)")) + 
   annotate("text", x = Inf, y = fdrCut, label = paste0("5% FDR"),
              size = 3, vjust =2, hjust=-0.1) +
   theme_full +
@@ -912,6 +922,7 @@ plotDrugPval <- ggplot(plotTab, aes(x=name, y=-log10(P.Value), col = factor)) +
         panel.grid.minor = element_line(),
         axis.text.x = element_text(angle = 90, hjust=1, vjust=0.5))
 plotDrugPval
+
 ```
 
 
@@ -931,7 +942,7 @@ plotDrugScatter <- lapply(plotFeature, function(n) {
   annoCoef <- paste("coefficient =",format(res$estimate,digits = 2))
   annoP <- paste("italic(P)~'=",formatNum(res$p.value, digits = 1, format = "e"),"'")
   ggplot(eachTab, aes(x=LF4, y=value)) +
-    geom_point(fill = colList[4],size=2,shape=21) + geom_smooth(method="lm",se=FALSE, linetype = "dashed", color = "grey50") +
+    geom_point(fill = colList[6],size=2,shape=21) + geom_smooth(method="lm",se=FALSE, linetype = "dashed", color = "grey50") +
     annotate("text", x = Inf, y = Inf, label = annoCoef,
            hjust=1, vjust =1, size = 5, col= colList[1]) +
     annotate("text", x = Inf, y = Inf, label = annoP,
@@ -944,10 +955,16 @@ grid.arrange(grobs= plotDrugScatter, ncol=3)
 
 ```
 
+A different arrangement
+```{r drugScatterOnly, fig.height=16, fig.width=8}
+grid.arrange(grobs= plotDrugScatter, ncol=2)
+```
+
 ## Organizing figures for Section 4 in the manuscript
 
 ### Main Figure 4
 ```{r figure4, fig.height=8, fig.width=12.5}
+set.seed(2)
 title = ggdraw() + draw_figure_label("Figure 4", fontface = "bold", position = "top.left",size=22)
 
 leftGrid <- plot_grid(rnaEnrichHallmark + theme(plot.margin = margin(0,1,1,0,"cm")),
@@ -957,43 +974,39 @@ leftGrid <- plot_grid(rnaEnrichHallmark + theme(plot.margin = margin(0,1,1,0,"cm
                       vjust = c(1.5,1.5))
 
 rightGrid <- plot_grid(plotSeahorse, comNet,
-                       ncol=1,rel_heights = c(0.58, 0.5),
+                       ncol=1,rel_heights = c(0.58, 0.6),
                        labels = c("c","d"), label_size = 22)
 
 pout <- plot_grid(leftGrid, rightGrid,rel_widths = c(1,1), ncol =2)
 plot_grid(title, pout, rel_heights = c(0.05,0.95), ncol = 1)
-#ggsave("Figure4.png", height = 8, width = 12.5)
 ```
 
 ## Supplementary figures
 
 ### Enrichment for M-CLL and U-CLL separately
-```{r enrichUM, fig.height=9, fig.width=10}
-plot_grid(plotEnrichHallmark.U, NULL, plotEnrichHallmark.M, rel_heights = c(0.5,0.05,0.5), nrow = 3, align = "v")
+```{r enrichUM, fig.height=3, fig.width=15}
+plot_grid(plotEnrichHallmark.U + theme(legend.position = "none"), NULL, plotEnrichHallmark.M, rel_widths = c(0.45,0.08, 0.5), ncol = 3, align = "v")
 ```
 
 
 ### Asseble supplementary figures to show enrichment barplot
-```{r otherStimulationErich,fig.height=15, fig.width=20, dev=c("png", "pdf")}
+```{r otherStimulationErich,fig.height=11, fig.width=16, dev=c("png", "pdf")}
 plot_grid(plotEnrich.CPG, plotEnrich.IL21CD40L, plotEnrich.Tcell, plotEnrich.IgM,
           ncol=2, align = "hv",axis = "tblr")
 ```
 
 #### Supplementary figure of Pvalue and variance explained plot
 ```{r drugPvar, fig.height=18, fig.width=12}
-#pdf("test.pdf", height=14, width = 12)
 plot_grid(plotDrugPval,
           plot_grid(plotlist = plotDrugScatter, ncol = 3),
-          align = "v", nrow =2, labels = c("A","B"), 
+          align = "v", nrow =2, labels = c(" "," "), 
           rel_heights = c(0.4,0.6),label_size = 22,ncol=1)
-#dev.off()
 ```
 
 
 #### Supplementary Figure for mitochondrial biogenesis
 ```{r mitoBiogenesis, fig.height=18, fig.width=14}
 plot_grid(grobHeatmap,
-          plot_grid(plotMitoScatter, corMitoMarer, nrow=1, rel_widths = c(0.5,1), labels = c("B","C"), label_size = 22),
-          ncol=1, rel_heights = c(3,1), labels = c("A",""), label_size = 22)
-#ggsave("test.pdf", height = 18, width = 14)
+          plot_grid(plotMitoScatter, corMitoMarer, nrow=1, rel_widths = c(0.5,1), labels = c(" "," "), label_size = 22),
+          ncol=1, rel_heights = c(3,1), labels = c(" ",""), label_size = 22)
 ```
